cookbooks/microservices/deployments/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "generic-deployment"
  labels:
    app.kubernetes.io/instance: "generic-deployment"
    app.kubernetes.io/name: "generic-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "generic-deployment"
      app.kubernetes.io/instance: "generic-deployment"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "generic-deployment"
        app.kubernetes.io/instance: "generic-deployment"
    spec:
      containers:
        - name: "generic-deployment"
          image: "docker.io/hashicorp/http-echo:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-generic-deployment"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          ports:
            - name: "http"
              containerPort: 9000
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: "http"
          readinessProbe:
            httpGet:
              path: "/health"
              port: "http"
          resources:
            {}
      volumes:
        - name: cm-generic-deployment
          configMap:
            name: cm-generic-deployment
            defaultMode: 0744
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
